<resources>
    <string name="app_name">Railway station photos</string>
    <string name="app_name_debug">Railway station photos (debug)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_title_your_data">My data</string>
    <string name="menu_title_update_photos">Update</string>
    <string name="menu_title_stations_with_photo">Stations with photo</string>
    <string name="menu_title_stations_without_photo">Near by</string>
    <string name="menu_title_all_stations_without_photo">All stations without photo</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="maps_activity">Station map</string>
    <string name="no_location_detected">No position found</string>
    <string name="title_activity_details">Station details</string>
    <string name="no_stations_loaded">No stations loaded. Please click on update first.</string>
    <string name="no_stations_in_database">An update has not yet occurred</string>
    <string name="take_photo">Take a photo</string>
    <string name="send_email">Send E-Mail</string>
    <string name="share_photo">Share</string>
    <string name="nav_to_station">Navigate to the station</string>
    <string name="title_activity_my_data">Your data</string>
    <string name="CC0">CC0 - without attribution</string>
    <string name="CC4">CC4. 0 with attribution (no longer supported)</string>
    <string name="tvLicense">Photo license</string>
    <string name="tvOwnPhoto">Are the photos submitted your own photos?</string>
    <string name="rbOwnPhotoYes">Yes</string>
    <string name="rbOwnPhotoNo">No</string>
    <string name="tvLinking">Would you like to be linked from our photo database?</string>
    <string name="etLinking">Please enter the URL to your account</string>
    <string name="rbLinkingYes">Yes</string>
    <string name="rbLinkingNo">No (will be saved as anonymous)</string>
    <string name="rbLinkingwebpage">Own Web page</string>
    <string name="tvNickname">Nickname</string>
    <string name="menu_title_your_own_station_photos">Your own photos</string>
    <string name="rbLinkingWith">Link with: </string>
    <string name="ownPhoto">own photo</string>
    <string name="bt_mydata_commit">Save</string>
    <string name="bt_mydata_clear">Reset</string>
    <string name="preferences_saved">Your data is stored. </string>
    <string name="preferences_cleared">Your data have been reset. When you reopen the page you can start over.</string>
    <string name="tvOwnPhotos">Are these your own photos…</string>
    <string name="nav_oepnv">by bus and train</string>
    <string name="nav_car">by car</string>
    <string name="nav_bike">by bike</string>
    <string name="nav_walk">walk</string>
    <string name="nav_show">only the location</string>
    <string name="navMethod">Show the way…</string>
    <string name="title_activity_outbox">Outbox</string>
    <string name="activitynotfound">You have no navigation app on your Smartphone</string>
    <string name="count_of_images">You have %1$d station photo(s) on the storage</string>
    <string name="search_hint">Search station</string>
    <string name="app_info_title">About the app</string>
    <string name="app_info_ok">OK</string>
    <string name="app_info_text">Version: <b>%s</b>\nApp development: \n<b><a href="http://www.gaby-becker.de">Gaby Becker</a></b>
        \nin 08/2016 during the OpenSource project of <b><a href="http://www.deutschlands-bahnhoefe.org">Deutschlands Bahnhöfe</a></b>.          \n\nThe station data were provided by Deutsche Bahn in the context of the local <b><a href="http://data.deutschebahn.com/pages/nutzungsbedingungen">OpenData project</a></b>.          \n\nThe json file that merges the photos and the station data, is provided by the Java application developed by <b><a href="https://twitter.com/storchp">Peter Storch</a></b>.           \n\nThe app uses the <a href="https://design.google.com/icons/">material-design-icons used by Google,</a> under Apache license version 2.0\n\n<b>Involved</b> in the "Deutschlands-Bahnhöfe" project: \n\n<b>- <a href="https://www.twitter.com/khgdrn">Kirsten Hagedor n (map development)</a></b>
        \n\n<b>- Alexandra Schön (design)</b>
        \n\n<b>- Katrin Schönherr (php development)</b>
    </string>
    <string name="map_info_title">About Maps</string>
    <string name="map_info_ok">OK</string>
    <string name="map_info_text">The default map is provided by <b><a href="https://openstreetmap.org">OpenStreetMap.org</a></b>.
        \nJoin the community and help to improve the map, see <b><a href="https://www.openstreetmap.org/fixthemap">www.openstreetmap.org/fixthemap</a></b>
        \n\nPlease consider downloading an offline map to decrease the server load and save your mobile data plan.
        \nSome offline maps can be found here:
        \n<b>- <a href="http://download.mapsforge.org/">Mapsforge</a></b>
        \n<b>- <a href="https://www.freizeitkarte-osm.de/android/en/">Freizeitkarte Android</a></b>
        \n<b>- <a href="https://www.openandromaps.org/en">OpenAndroMaps</a></b>
        \n<b>- ...</b>
        \n\nSome maps require special themes to render correctly! These need to be downloaded and configured accordingly.
    </string>
    <string name="information">Information</string>
    <string name="menu_title_info">About the app</string>
    <string name="benachrichtigen">Notifications</string>
    <string name="nahe_gelegenen_bahnhof_melden">Report nearby stations</string>
    <string name="station_is_near">Stations nearby</string>
    <string name="template_short_text" formatted="false">Station %s in %.2f km</string>
    <string name="template_long_text" formatted="false">Station: %s\ndistance: %.2f km\n%s</string>
    <string name="photo_exists">Photo: open for license info</string>
    <string name="nearby_notification_active">Notification of nearby stations is active</string>
    <string name="license_tag" formatted="false">Owner: %s, %s</string>
    <string name="picture_landscape_only">Please use landscape orientation</string>
    <string name="no_location_enabled">Location disabled</string>
    <string name="country_activity">Country selection</string>
    <string name="countrySelection">Country selection</string>
    <string name="nicknameFilter">Filter by photographer</string>
    <string name="dialog_message">You have not filled out your profile under \"My data\" yet. You can only save a photo, when this is done.</string>
    <string name="dialog_title">Fill in your data</string>
    <string name="label_map">Map</string>
    <string name="label_timetable">Departures</string>
    <string name="fab_subject">Message to the station photo app</string>
    <string name="fab_chooser_title">Send mail</string>
    <string name="menu_title_introslider">Manual</string>
    <string name="menu_follow_my_location">Follow my position</string>
    <string name="text_intro_slider1">We collect station photos from users, which we can provide to other developers under a free license. Our favorite license is CC0. \n\n<b>New in this version is that you can report missing stations with Longclick on the map.</b></string>
    <string name="text_intro_slider2">Please fill in the required data under \'My data\', so that we can give your photo files a correct name. Without the nick name entry you can not shoot photos from within the app. \n\n<b>Requesting the token for the upload is quite easy and quick.</b></string>
    <string name="text_intro_slider3">In the menu under<b> \'Station map\' </b>and on the <b>list on the homepage</b> you can find a selection in the menu, whether you want <b>all</b> stations (longer loading time), only the stations <b>with</b> photo or just stations <b>without</b> photos to be displayed.</string>
    <string name="text_intro_slider4">There are 2 ways to take a photo of a train station: about the search on the <b>Mainpage</b> or <b>through the map menu point \'Station map\'</b>. The photo icon is only clickable if you\'re holding your Smartphone in landscape mode.</string>
    <string name="text_intro_slider5">As soon as you have taken a photo, it will be displayed and you can upload it.<b>Non-existing stations can now also be reported using the new button.</b></string>
    <string name="text_intro_slider6">In this screen you can find the icon to share the photo. When you choose to use for example the Twitter-App, all hashtags are used automatically.</string>
    <string name="text_intro_slider7">When you are on the go and want to be informed of nearby stations, you can switch on the location notification of stations.\n\n<b>The selection of the notified stations is dependent on the selection of the list on the mainpage - see Station selection -.</b></string>
    <string name="text_intro_slider8">The chat was switched off in the meantime. You can always communicate with us via Twitter.</string>
    <string name="text_intro_slider9">When starting the app, the stations from Germany are loaded. If you want change the country from DE to <b>another</b> country, you can do this in the home screen top right. As soon as you press the back button, the new country will be loaded.</string>
    <string name="next">NEXT</string>
    <string name="skip">CANCEL</string>
    <string name="proceed">START</string>
    <string name="title_activity_high_score">Highscore</string>
    <string name="menu_title_highscore">Highscore</string>
    <string name="photo_upload">Upload photo</string>
    <string name="upload_completed">Upload successfully</string>
    <string name="upload_token_invalid">Your upload token is invalid. Please request a new one.</string>
    <string name="upload_failed">Photo upload failed: %1s</string>
    <string name="etEmail">Please enter your email address
\n and click on \'Request token\'</string>
    <string name="etUploadToken">Please enter the received token here</string>
    <string name="tvPhotoUpload">Do you want to upload photos from within the app?</string>
    <string name="bt_mydata_get_token">Request token</string>
    <string name="upload_token_email">Upload token requested, please have a look in your email inbox.</string>
    <string name="registration_failed">Failed to register account: %1s</string>
    <string name="registration_needed">To be able to use the upload function, you have to login under \"My Data\".</string>
    <string name="title_slider1">Railway station photos</string>
    <string name="select_photo">Photo selection</string>
    <string name="station_photo">Station photo</string>
    <string name="menu_title_stations_map">Station map</string>
    <string name="menu_photo_filter">Filter with/without photo</string>
    <string name="update_manual">Manual</string>
    <string name="update_notify">Ask</string>
    <string name="update_automatic">Automatically</string>
    <string name="logo_train">small locomotive logo</string>
    <string name="anonymous">Anonymous</string>
    <string name="yesPhotoOwner">Yes, these are my own photos</string>
    <string name="tvAnonymous">Do you want to be an anonymous photographer?</string>
    <string name="update_policy">Update policy</string>
    <string name="tvEmail">Email</string>
    <string name="tvUploadToken">Upload Token</string>
    <string name="station_name">Name of the station</string>
    <string name="login">Login</string>
    <string name="bt_new_register">Register new account</string>
    <string name="tvEmailOrNickname">Email or Nickname</string>
    <string name="bt_logout">Logout</string>
    <string name="bt_register">Register</string>
    <string name="provider_android_app">Provider App</string>
    <string name="station_info">Info</string>
    <string name="menu_title_outbox">Outbox</string>
    <string name="report_problem">Report problem</string>
</resources>