<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notify"
        android:title="@string/benachrichtigen"
        android:hint="@string/nahe_gelegenen_bahnhof_melden"
        android:icon="@drawable/ic_notifications_off_white_24px"
        app:showAsAction="collapseActionView|ifRoom"
        android:checkable="true"
        android:checked="false"/>
    <item
        android:id="@+id/menu_toggle_photo"
        android:icon="@drawable/ic_station_filter_without_photo_24px"
        android:title="@string/menu_photo_filter"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/search"
        android:title="@string/search_hint"
        android:hint="@string/search_hint"
        android:icon="@drawable/ic_search_white_24px"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/nicknameFilter"
        android:title="@string/nicknameFilter"
        android:icon="@drawable/ic_person_24px"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/countrySelection"
        android:title="@string/countrySelection"
        android:icon="@drawable/ic_language_white_24px"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:title="@string/update_policy">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/rb_update_manual"
                       android:title="@string/update_manual" />
                <item android:id="@+id/rb_update_notify"
                       android:title="@string/update_notify" />
                <item android:id="@+id/rb_update_automatic"
                      android:title="@string/update_automatic" />
            </group>
        </menu>
    </item>
</menu>
