<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_data"
            android:icon="@drawable/ic_account_box_gray_24px"
            android:title="@string/menu_title_your_data" />
        <item
            android:id="@+id/nav_stations_map"
            android:icon="@drawable/ic_map_gray_24px"
            android:title="@string/menu_title_stations_map" />
        <item
            android:id="@+id/nav_highscore"
            android:icon="@drawable/ic_trending_up_gray_24px"
            android:title="@string/menu_title_highscore" />
        <item
            android:id="@+id/nav_outbox"
            android:icon="@drawable/ic_outbox_gray_24px"
            android:title="@string/menu_title_outbox" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox_gray_24px"
            android:title="@string/menu_title_inbox" />
        <item
            android:id="@+id/nav_update_photos"
            android:checkable="false"
            android:icon="@drawable/ic_cached_gray_24px"
            android:title="@string/menu_title_update_photos" />
    </group>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_help_gray_24px"
                android:title="@string/menu_title_introslider" />
            <item
                android:id="@+id/nav_web_site"
                android:icon="@drawable/ic_public_gray_24px"
                android:title="@string/menu_title_website" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_mail_gray_24px"
                android:title="@string/menu_email" />
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_info_gray_24px"
                android:title="@string/menu_title_info" />
        </menu>
    </item>

</menu>
