<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_my_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.bahnhoefe.deutschlands.bahnhofsfotos.MyDataActivity"
    tools:showIn="@layout/activity_mydata">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmailOrNickname"
            android:text="@string/tvEmailOrNickname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmailOrNickname"
            android:layout_below="@+id/tvEmailOrNickname"
            android:inputType="textEmailAddress"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoginUploadToken"
            android:layout_below="@+id/etEmailOrNickname"
            android:text="@string/tvUploadToken"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLoginUploadToken"
            android:hint="@string/etUploadToken"
            android:layout_below="@+id/tvLoginUploadToken"
            android:layout_marginRight="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etLoginUploadToken"
            android:text="@string/login"
            android:onClick="login"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login_get_token"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/bt_login"
            android:text="@string/bt_mydata_get_token"
            android:onClick="newUploadToken"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_register"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/bt_login_get_token"
            android:text="@string/bt_new_register"
            android:onClick="newRegister"
            />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:text="@string/tvEmail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:layout_below="@+id/tvEmail"
            android:inputType="textEmailAddress"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUploadToken"
            android:layout_below="@+id/etEmail"
            android:text="@string/tvUploadToken"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUploadToken"
            android:hint="@string/etUploadToken"
            android:layout_below="@+id/tvUploadToken"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNickname"
            android:text="@string/tvNickname"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/etUploadToken"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNickname"
            android:layout_below="@+id/tvNickname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLicence"
            android:layout_below="@+id/etNickname"
            android:text="@string/tvLicense"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLicence"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/cbLicenseCC0"
            android:layout_marginBottom="20dp"
            android:text="@string/CC0"
            android:onClick="selectLicense"
            >
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOwnPhoto"
            android:layout_below="@+id/cbLicenseCC0"
            android:text="@string/tvOwnPhotos"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbOwnPhoto"
            android:layout_below="@+id/tvOwnPhoto"
            android:layout_marginBottom="20dp"
            android:text="@string/yesPhotoOwner"
            >
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAnonymous"
            android:layout_below="@+id/cbOwnPhoto"
            android:text="@string/tvAnonymous"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAnonymous"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/cbAnonymous"
            android:onClick="onAnonymousChecked"
            android:layout_marginBottom="20dp"
            android:text="@string/anonymous"
            >
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLinking"
            android:layout_below="@+id/cbAnonymous"
            android:text="@string/tvLinking"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etLinking"
            android:hint="@string/etLinking"
            android:layout_below="@+id/tvLinking"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btProfileSave"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/etLinking"
            android:text="@string/bt_register"
            android:onClick="register"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_logout"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/btProfileSave"
            android:text="@string/bt_logout"
            android:onClick="logout"
            />

    </RelativeLayout>

    </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
