<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.bahnhoefe.deutschlands.bahnhofsfotos.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_stations_with_photo"
            android:scaleType="fitCenter"
            android:contentDescription="@string/station_photo"/>

        <ImageView
            android:id="@+id/marker"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:src="@drawable/marker_missing"
            android:scaleType="centerCrop"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            tools:scaleType="centerCrop"
            android:contentDescription="@string/station_info"
            android:onClick="showStationInfo"/>

        <EditText
            android:id="@+id/etbahnhofname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/marker"
            android:textSize="25sp"
            android:inputType="none"
            android:textStyle="bold"
            android:background="#50ffffff"
            android:padding="8dp"
            android:hint="@string/station_name" />

        <TextView
            android:id="@+id/license_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@id/imageview"
            android:text="@string/license_tag"
            android:background="#50ffffff"
            android:padding="8dp"
            android:textColorLink="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_above="@id/license_tag"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo_camera_red_48px"
                android:background="@null"
                android:contentDescription="@string/take_photo"/>

            <ImageButton
                android:id="@+id/button_select_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo_red_48px"
                android:background="@null"
                android:contentDescription="@string/select_photo"/>

            <ImageButton
                android:id="@+id/button_report_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bullhorn_48px"
                android:background="@null"
                android:contentDescription="@string/report_problem"/>

            <ImageButton
                android:id="@+id/button_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_upload_red_48dp"
                android:background="@null"
                android:contentDescription="@string/photo_upload"/>

        </LinearLayout>

        <TextView
            android:id="@+id/rotate_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/buttons"
            android:text="@string/picture_landscape_only"
            android:textStyle="bold"
            android:background="#80ffffff"
            android:padding="8dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
