<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:background="@color/introSlider1"
    android:orientation="vertical">
        
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_logotrain"
        android:contentDescription="@string/logo_train"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_slider1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/text_intro_slider1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>